<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="div">/</string>
    <string name="mult">*</string>
    <string name="minus">-</string>
    <string name="plus_minus">+/-</string>
    <string name="fraction">1/х</string>
    <string name="clear">←</string>
    <string name="percent">%</string>
    <string name="reset">C</string>
    <string name="result">=</string>
    <string name="text"></string>
    <string name="night">Выбор темы</string>
    <string name="day">day</string>
    <string name="Selecting">Выберите тему калькулятора:</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="themegreen">Зеленая тема</string>
    <string name="themered">Красная тема</string>
    <string name="themeblue">Синяя тема</string>
    <string name="themedefault">тема по умолчанию</string>
</resources>