<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/text"
        android:text="@string/text"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MyTextStyle" />

    <FrameLayout
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:columnCount="4">

            <Button
                android:id="@+id/reset"
                android:onClick="resetBTN"
                android:text="@string/reset" />

            <Button
                android:id="@+id/clear"
                android:onClick="clearBTN"
                android:text="@string/clear" />

            <Button
                android:id="@+id/percent"
                android:onClick="percentBTN"
                android:text="@string/percent" />

            <Button
                android:id="@+id/div"
                android:onClick="divBTN"
                android:text="@string/div" />

            <Button
                android:id="@+id/seven"
                android:onClick="sevenBTN"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eight"
                android:onClick="eightBTN"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine"
                android:onClick="nineBTN"
                android:text="@string/nine" />

            <Button
                android:id="@+id/mult"
                android:onClick="multBTN"
                android:text="@string/mult" />

            <Button
                android:id="@+id/four"
                android:onClick="fourBTN"
                android:text="@string/four" />

            <Button
                android:id="@+id/five"
                android:onClick="fiveBTN"
                android:text="@string/five" />

            <Button
                android:id="@+id/six"
                android:onClick="sixBTN"
                android:text="@string/six" />

            <Button
                android:id="@+id/minus"
                android:onClick="minusBTN"
                android:text="@string/minus" />

            <Button
                android:id="@+id/one"
                android:onClick="oneBTN"
                android:text="@string/one" />

            <Button
                android:id="@+id/two"
                android:onClick="twoBTN"
                android:text="@string/two" />

            <Button
                android:id="@+id/three"
                android:onClick="threeBTN"
                android:text="@string/three" />

            <Button
                android:id="@+id/plus"
                android:onClick="plusBTN"
                android:text="@string/plus" />

            <Button
                android:id="@+id/plus_minus"
                android:onClick="plusMinusBTN"
                android:text="@string/plus_minus" />

            <Button
                android:id="@+id/zero"
                android:onClick="zeroBTN"
                android:text="@string/zero" />

            <Button
                android:id="@+id/dot"
                android:onClick="dotBTN"
                android:text="@string/dot" />

            <Button
                android:id="@+id/result"
                android:onClick="equalBTN"
                android:text="@string/result" />

        </GridLayout>

        <Button
            android:id="@+id/btn_theme"
            style="@style/ButtonNight"
            android:text="@string/night" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>