<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/Selecting"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/radioButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513">

    </TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtons" />

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themedefault" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themered" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themegreen" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themeblue" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>